Refactor Token Management and Security Handling
- Updated TokenService interface to include methods for refreshing and revoking tokens, and managing refresh tokens.
- Removed TokenCleanupService as its functionality is now integrated into TokenServiceImpl.
- Enhanced TokenServiceImpl to handle token refresh logic, including validation and session management.
- Introduced CustomAccessDeniedHandler for improved access denial responses.
- Removed outdated CustomJwtAuthenticationEntryPoint and related error handling classes.
- Updated JwtUtils to support token type differentiation and expiration management.
- Added PasswordEncoderUtil for password verification.
- Removed unused response classes related to authentication and validation errors.
- Updated application properties and metadata to include max session configuration.